Fixed issue with overflow/scroll of main content and music-player getting out of display

--- a/CSS/Project/style.css
+++ b/CSS/Project/style.css
@@ -11,8 +11,9 @@ body{
 }
 
 .main{
-    display: flex;
     flex: 1;
+    display: flex;
+    overflow: auto;
 }
 
 .sidebar{
@@ -26,14 +27,17 @@ body{
     background-color: rgb(25, 25, 25);
     border-radius: 1rem;
     flex: 1;
-    overflow: auto;
+    overflow: hidden;
     margin: 0.25rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .music-player{
-    bottom: 0;
     width: 100%;
     height: 72px;
+    position: sticky;
+    background-color: black;
 }
 
 .nav{
@@ -152,9 +156,12 @@ body{
 .navbar{
     display: flex;
     position: sticky;
+    top: 0;
     background-color: rgb(25, 25, 25);
     padding: 0.5rem 1rem;
     justify-content: space-between;
+    height: 2.5rem;
+    align-items: center;
 }
 
 .nav-btn{
@@ -172,6 +179,11 @@ body{
     opacity: 1;
 }
 
+.navbar-buttons{
+    display: flex;
+    height: 2.5rem;
+}
+
 .navbar-btn{
     background-color: black;
     color: white;
@@ -187,4 +199,10 @@ body{
 .navbar-btn:hover{
     opacity: 1;
     font-size: 0.9rem;
+}
+
+.content{
+    flex: 1;
+    overflow: auto;
+    min-height: 0;
 }
